# cse5542lab2

./: .gitignore  CMakeLists.txt  GlGlut.cpp  GlGlut.h  Perimitives.cpp  Perimitives.h  Primitives.cpp  Primitives.h  README  cse5542lab2.sln  cse5542lab2.vcxproj  cse5542lab2.vcxproj.filters  lab2.cpp  wincompile.bat
